# Xelgar

./: CMakeLists.txt
engine/assets/shaders/: basic_frag.glsl
engine/include/: colour.hpp
engine/include/gfx/: renderer.hpp  shader.hpp  window.hpp
engine/include/utils/: math.hpp
engine/src/: colour.cpp  main.cpp
engine/src/gfx/: renderer.cpp  shader.cpp  window.cpp
engine/src/utils/: math.cpp
